# polygon-mcp

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.py  glama.json  http_wrapper.py  justfile  pyproject.toml
.github/workflows/: ci.yml
src/mcp-polygon/: server.py
src/mcp_polygon/: server.py
