[project]
name = "mcp_polygon"
version = "0.1.0"
description = "A MCP server project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
 "mcp[cli]>=1.4.1",
 "polygon-api-client>=1.14.4",
]
[[project.authors]]
name = "Polygon"
email = "support@polygon.io"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
mcp_polygon = "mcp_polygon:run"
