[project]
name = "mcp_polygon"
version = "0.4.0"
description = "A MCP server project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.9.3",
 "polygon-api-client>=1.15.3",
]
[[project.authors]]
name = "Polygon"
email = "support@polygon.io"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.12.4",
]

[project.scripts]
mcp_polygon = "mcp_polygon:run"
